# Trinity-Studio

./: README.md
scripts/config/: sample_recipe.yaml
scripts/db/: init_training_portal.sql
src/: package-lock.json  package.json
src/apps/label-studio-proxy/: README.md  package-lock.json  package.json  server.js  start.js
src/apps/pgadmin/backend/: package-lock.json  package.json  server.js
src/apps/pgadmin/backend/src/: index.js
src/apps/pgadmin/backend/src/services/: database.js
src/apps/pgadmin/config/: README.md  schema.sql  setup_db.sh
src/apps/pgadmin/frontend/: package-lock.json  package.json  server.js
src/apps/pgadmin/frontend/public/: index.html
src/apps/pgadmin/frontend/src/: App.jsx  config.js  index.js
src/apps/training-portal/: README.md
src/apps/training-portal/backend/: pyproject.toml  setup.sh  start.sh  stop.sh
src/apps/training-portal/backend/app/: __init__.py  routes.py  wandb_util.py
src/apps/training-portal/frontend/: package-lock.json  package.json  start.js  webpack.config.js
src/apps/training-portal/frontend/public/: index.html
src/apps/training-portal/frontend/src/: App.jsx  TensorboardViewer.jsx  WandbMonitor.jsx  config.js
src/configs/: .env.example  README.md  default.json  development.json  index.js  package.json
src/root-config/: package-lock.json  package.json  server.js  webpack.config.js
src/root-config/public/: index.html
src/root-config/src/: App.jsx  index.js  root-config.js
